--- a/config/packages/apiroute.yaml
+++ b/config/packages/apiroute.yaml
@@ -2,7 +2,5 @@ api_route:
   openapi:
     title: "ApiRoute Example"
     version: "0.1.0"
-  swagger: true
+  enable_swagger: true
   base_path: "/api"
-  resources:
-    - "../src/"
